[package]
name = "kv6"
version = "0.1.3"
description = "Collection of structs to allow reading of Ken Silverman's voxel formats"
repository = "https://github.com/Autist69420/kv6"
license = "MIT"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scroll = { version = "0.11.0", features = ["derive"] }

[features]
default = ["kv6"]
kvx = []
kv6 = []